Add enable native access flags to producer & consumer launchers